--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
-<HTML>
-<HEAD>
-<TITLE>Actividad 1 UNAD</TITLE>
-</HEAD>
-<BODY>
-<P>Hola UNAD</P>
-<P>JACK QUINTERO</P>
-<P>COD: 80108462</P>
-<P>SEPTIEMBRE 2018</P>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+
+
+<html lang="es" class"no-js">
+
+<head>
+	
+	<meta charset="UTF-8">
+	<meta content="Jack Quintero" name="author"/>
+	<title>UNAD - INGENIERIA DE SISTEMAS</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+
+<body>	
+
+<Div id="contenidos">
+	<header>
+		<center>  <img src="images/logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
+	</header>
+
+<nav>
+	<ul class="menu">
+		<li><a href="index.html" class="menu">INICIO</a></li>
+		<li><a href="pag1.html" class="menu">UNIDAD 1</a></li>
+		<li><a href="pag2.html" class="menu">UNIDAD 2</a></li>
+		<li><a href="pag3.html" class="menu">UNIDAD 3</a></li>
+		<li><a href="pag4.html" class="menu">ESTUDIANTE</a></li>
+	</ul>
+</nav>
+
+<section>
+	<article>
+		<h1>UNAD - INGENIERIA DE SISTEMAS</h1>
+		<figure>
+			<p>
+				<center> <a href="https://estudios.unad.edu.co/ingenieria-de-sistemas" target="_blank" class="menu"> <img src="https://estudios.unad.edu.co/images/ecbti/archivosEscuela/superiorcienciasbasicas2.jpg" border="0" width="500" height="100" alt="info"></a> </center>
+			</p>
+		</figure>
+		<h2>La Universidad Nacional Abierta y a Distancia UNAD, a través del programa de Ingeniería de Sistemas tiene como propósito formar profesionales capaces de planear, asesorar y dirigir proyectos de desarrollo tecnológico relacionados con la implementación de sistemas informáticos en procesos socioeconómicos de producción y servicios.</h2>
+	</article>
+</section>
+
+<aside>
+
+		<h1>Vinculos Relacionados</h1>
+		<center> <iframe width="300" height="250" src="https://www.youtube.com/embed/ak3ymJsLYsc" frameborder="0" allowfullscreen></iframe></center>
+</aside>
+
+	<header>
+		<center>  <img src="images/unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
+	</header>
+
+</Div>
+</body>
+
+
+<script src="js/modernizr.js"></script>   
+<script src="js/prefixfree.min.js"></script>
+<script src="js/jquery-2.1.1.js"></script>   
+
+</html>
