--- a/pag1.html
+++ b/pag1.html
@@ -49,7 +49,7 @@
 		<center> <a href="http://bibliotecavirtual.unad.edu.co:2048/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=edselp&AN=S0187358X16000307&lang=es&site=eds-live" target="_blank" >Enlace de información 1</a> </center>
 		<center> <a href="http://bibliotecavirtual.unad.edu.co:2048/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=eue&AN=120050986&lang=es&site=eds-live" target="_blank" >Enlace de información 2</a> </center>
 		<center> <a href="https://git-scm.com/book/es/v2" target="_blank" >Enlace de información 3</a> </center>
-		<h1>Información de Interes</h1>
+		<h1>Información de </h1>
 		<center> <a href="https://noticias.unad.edu.co/index.php/unad-noticias/todas/2457-ultima-convocatoria-2018-para-posgrados-de-gestion-de-tecnologias-de-informacion" target="_blank" class="menu"> <img src="int1.jpg" ></a> </center>
 </aside>
 
