--- a/pag4.html
+++ b/pag4.html
@@ -8,9 +8,9 @@
 	<meta charset="UTF-8">
 	<meta content="Jack Quintero" name="author"/>
 	<title>UNAD - INGENIERIA DE SISTEMAS</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 
 <Div id="contenidos">
 	<header>
-		<center>  <img src="images/logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
+		<center>  <img src="logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
 	</header>
 
 <nav>
@@ -44,18 +44,18 @@
 <aside>
 
 		<h1>Jack Quintero</h1>
-		<center>  <img src="images/jack.jpg"  border="0" width="350" height="350" alt="info"></center>
+		<center>  <img src="jack.jpg"  border="0" width="350" height="350" alt="info"></center>
 </aside>
 
 	<header>
-		<center>  <img src="images/unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
+		<center>  <img src="unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
 	</header>
 
 </Div>
 </body>
 
-<script src="js/modernizr.js"></script>   
-<script src="js/prefixfree.min.js"></script>
-<script src="js/jquery-2.1.1.js"></script>   
+<script src="modernizr.js"></script>   
+<script src="prefixfree.min.js"></script>
+<script src="jquery-2.1.1.js"></script>   
 
 </html>
