--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta charset="UTF-8">
 	<meta content="Jack Quintero" name="author"/>
 	<title>UNAD - INGENIERIA DE SISTEMAS</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -19,7 +19,7 @@
 
 <Div id="contenidos">
 	<header>
-		<center>  <img src="images/logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
+		<center>  <img src="logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
 	</header>
 
 <nav>
@@ -37,7 +37,7 @@
 		<h1>UNAD - INGENIERIA DE SISTEMAS</h1>
 		<figure>
 			<p>
-				<center> <a href="https://estudios.unad.edu.co/ingenieria-de-sistemas" target="_blank" class="menu"> <img src="https://estudios.unad.edu.co/images/ecbti/archivosEscuela/superiorcienciasbasicas2.jpg" border="0" width="500" height="100" alt="info"></a> </center>
+				<center> <a href="https://estudios.unad.edu.co/ingenieria-de-sistemas" target="_blank" class="menu"> <img src="https://estudios.unad.edu.co/ecbti/archivosEscuela/superiorcienciasbasicas2.jpg" border="0" width="500" height="100" alt="info"></a> </center>
 			</p>
 		</figure>
 		<h2>La Universidad Nacional Abierta y a Distancia UNAD, a través del programa de Ingeniería de Sistemas tiene como propósito formar profesionales capaces de planear, asesorar y dirigir proyectos de desarrollo tecnológico relacionados con la implementación de sistemas informáticos en procesos socioeconómicos de producción y servicios.</h2>
@@ -51,15 +51,15 @@
 </aside>
 
 	<header>
-		<center>  <img src="images/unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
+		<center>  <img src="unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
 	</header>
 
 </Div>
 </body>
 
 
-<script src="js/modernizr.js"></script>   
-<script src="js/prefixfree.min.js"></script>
-<script src="js/jquery-2.1.1.js"></script>   
+<script src="modernizr.js"></script>   
+<script src="prefixfree.min.js"></script>
+<script src="jquery-2.1.1.js"></script>   
 
 </html>
