--- a/pag1.html
+++ b/pag1.html
@@ -8,9 +8,9 @@
 	<meta charset="UTF-8">
 	<meta content="Jack Quintero" name="author"/>
 	<title>UNAD - INGENIERIA DE SISTEMAS</title>
-	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -19,7 +19,7 @@
 
 <Div id="contenidos">
 	<header>
-		<center>  <img src="images/logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
+		<center>  <img src="logoUNAD.png"  border="0" width="800" height="200" alt="info"></center>
 	</header>
 
 <nav>
@@ -37,7 +37,7 @@
 		<h1>OVI UNIDAD 1</h1>
 		<figure>
 			<p>
-				<center> <a href="https://repository.unad.edu.co/handle/10596/9134" target="_blank" class="menu"> <img src="images/ovi1.png" border="0" width="500" height="300" alt="info"></a> </center>
+				<center> <a href="https://repository.unad.edu.co/handle/10596/9134" target="_blank" class="menu"> <img src="ovi1.png" border="0" width="500" height="300" alt="info"></a> </center>
 			</p>
 		</figure>
 	</article>
@@ -54,14 +54,14 @@
 </aside>
 
 	<header>
-		<center>  <img src="images/unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
+		<center>  <img src="unad.jpg"  border="0" width="1000" height="300" alt="info"></center>
 	</header>
 
 </Div>
 </body>
 
-<script src="js/modernizr.js"></script>   
-<script src="js/prefixfree.min.js"></script>
-<script src="js/jquery-2.1.1.js"></script>   
+<script src="modernizr.js"></script>   
+<script src="prefixfree.min.js"></script>
+<script src="jquery-2.1.1.js"></script>   
 
 </html>
